--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
                 </div>
                 <div class="item-3">
                     <h4>Buda Sándor</h4>
-                    <p> <i>"Anyu azt mondta hogy ha nem csinálok jobb weboldalakat agyon üt a gecibe... Hát ezért a
-                            szobába zárkózva a sarokba maszturbáltam egy kötőjel két órát lorem5"</i></p>
+                    <p> <i>"Teljesen megvoltam elégedve a közös munkánkkal, örülök hogy bármikor kérdésem, kívánságom volt - egyből teljesítette.</i></p>
                 </div>
             </div>
         </section>
